...
  const AppDrawer({super.key});

  @override
  Widget build(BuildContext context) {
    final List<DrawerMenuItem> menuItems = [
      DrawerMenuItem(
        title: 'Apps',
        icon: Icons.apps,
        route: '/apps',
      ),
      DrawerMenuItem(
        title: 'Settings',
        icon: Icons.settings,
...
